# pleurobot_ros_pkg

./: CMakeLists.txt  README.md  package.xml
config/: GLOBAL.config  VMC.config  arxModel.config  bjModel.config  cpg.config  file_trajFollower.config  forces.config  hill_muscle.config  hill_muscle_PID1.config  hill_muscle_PID2.config  ikinController_pleurobot.config  imageProc.config  joystick.config  kinematics_pleurobot.config  masses.config  pleurobot_controllers_numbered.yaml  reflex_posture.config  snake.config  torquesCtrl.config
config/animal_data/: _directory  animalAnglesAquastepping.txt  animalAnglesSwimming.txt  animalAnglesWalking_pleurobot 1.txt  animalAnglesWalking_pleurobot.txt  animalAnglesWalking_pleurobot_BACKUP.txt  animalSpine_pleurobot.txt  animalSwingStance_pleurobot.txt  jointAngles.txt  saveAngles.txt
config/animal_data/pleurodeles/: _directory  animalAnglesWalking_orobot_pleurodelestxt  animalSpine_orobot_pleurodeles.txt  animalSwingStance_orobot_pleurodeles.txt
config/tracks/: footsteps.txt  footsteps2.txt
data/: angLog.txt  fkinLog.txt  freqReference.txt  girdleLog.txt  logSnakeData.txt  plotRotMat.m  posLog.txt  rotMatLog.txt  tailForceLog.txt  timeLog.txt  torquePIDlog.txt  touchLog.txt
include/pleurobot_ros_pkg/: MLP.h  OptiCtrl.hpp  controller.h  filters.hpp  hill_muscle.h  joystick.h  muscle.hpp  physicsPluginCom.hpp  physicsPluginComTypDef.h  pleurobotSim.hpp  publisher.h  utils.h
launch/: navigation.rviz  pleurobot.rviz  pleurobot_control.launch  pleurobot_gazebo.launch  pleurobot_rtabmap.launch  pleurobot_rviz.launch  view_mapping.launch
src/: MLP.cpp  controller.cpp  controller_VMC.cpp  controller_estimation.cpp  controller_forces.cpp  controller_getParameters.cpp  controller_inverseKinematics.cpp  controller_misc.cpp  controller_optimizationStuff.cpp  controller_reflexes_posture.cpp  controller_snake.cpp  controller_torqueCtrl.cpp  controller_trajectory.cpp  controller_trajectory2.cpp  hill_muscle.cpp  joystick.cpp  muscle.cpp  pleurobot_main.cpp  publisher.cpp  tf_broadcaster.cpp  utils.cpp
urdf/: pleurobot-gazebo.xacro  pleurobot.gazebo  pleurobot.transmission.xacro  pleurobot_bodyBack.xacro  pleurobot_bodyFront.xacro  pleurobot_forearmLeft.xacro  pleurobot_forearmRight.xacro  pleurobot_head.xacro  pleurobot_hindLimbLeft.xacro  pleurobot_hindLimbRight.xacro  pleurobot_tail.xacro
urdf/sensors/: kinect.urdf.xacro  xtion.urdf.xacro
