<?xml version="1.0"?>
<package>
  <name>pleurobot_ros_pkg</name>
  <version>0.0.1</version>
  <description>The simulation package for pleurobot in ROS and GAZEBO</description>
     
  <maintainer email="mahsa.parsapour@gmail.com">Mahsa Parsapour</maintainer>

  <author>Mahsa Parsapour</author>  
  <author>Tomislav Horvat</author>  

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>controller_manager</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <export>

  </export>
</package>
